[gpu-offload] Make the example prove the GPU ran, and decline cleanly when it cannot
The example could report success without a GPU ever being involved. If
offload does not happen, both runs execute the same CPU plan, the
results match trivially, and it printed 'Results are identical'. Run
from an IDE that is exactly what happened: flink-examples-table did not
depend on flink-table-gpu-runtime, so the provider was not on the
classpath, the planner fell back, and no TornadoVM JVM arguments were
needed because TornadoVM was never used.

Three changes.

flink-examples-table now depends on flink-table-gpu-runtime at runtime
scope. The example still compiles against the Table API alone and never
references it; the dependency only puts the provider where ServiceLoader
looks, which is what dropping the jar into a distribution's lib/ does.

The example reads the outcome back from EXPLAIN -- which is rendered
after translation, so it reports what ran rather than what was intended
-- and fails with the planner's own reason plus setup instructions if
the work stayed on the CPU.

The provider now probes whether TornadoVM is usable before accepting a
spec. Without that probe, having the provider present but no
--enable-preview no longer fell back silently: it substituted a GPU
operator and then killed the job at submission with
'UnsupportedClassVersionError: Preview features are not enabled', an
error that names neither GPU offload nor the missing flag. It now
declines, and EXPLAIN carries the explanation.

Verified both ways. Without the argfile the example exits non-zero
saying --enable-preview is needed; with it, the query runs on the GPU,
results match, and -Dtornado.printKernel=True dumps the OpenCL.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>